--- a/CoviCURE/Forms/Main/dashboard.ui
+++ b/CoviCURE/Forms/Main/dashboard.ui
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Home</class>
- <widget class="QMainWindow" name="Home">
+ <class>Dashboard</class>
+ <widget class="QMainWindow" name="Dashboard">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1300</width>
-    <height>800</height>
+    <width>1260</width>
+    <height>700</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Dashboard</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../../resource.qrc">
+    <normaloff>:/resources/img/mask.png</normaloff>:/resources/img/mask.png</iconset>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(173, 181, 189);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>0</y>
       <width>1241</width>
       <height>651</height>
      </rect>
@@ -35,7 +51,7 @@ border-radius: 10px;</string>
       <rect>
        <x>30</x>
        <y>270</y>
-       <width>511</width>
+       <width>571</width>
        <height>161</height>
       </rect>
      </property>
@@ -72,9 +88,9 @@ background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx
     <widget class="QPushButton" name="pushButton_Rapidcovid">
      <property name="geometry">
       <rect>
-       <x>700</x>
+       <x>640</x>
        <y>460</y>
-       <width>511</width>
+       <width>571</width>
        <height>161</height>
       </rect>
      </property>
@@ -106,9 +122,9 @@ border-radius: 10px;</string>
     <widget class="QPushButton" name="pushButton_Hospital">
      <property name="geometry">
       <rect>
-       <x>700</x>
+       <x>640</x>
        <y>270</y>
-       <width>511</width>
+       <width>571</width>
        <height>161</height>
       </rect>
      </property>
@@ -151,7 +167,7 @@ background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx
       <rect>
        <x>30</x>
        <y>460</y>
-       <width>511</width>
+       <width>571</width>
        <height>161</height>
       </rect>
      </property>
@@ -180,7 +196,7 @@ border-radius: 10px;</string>
       <string>Vaccination</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_home">
+    <widget class="QLabel" name="label_dashboard">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -190,38 +206,10 @@ border-radius: 10px;</string>
       </rect>
      </property>
      <property name="styleSheet">
-<<<<<<< HEAD:CoviCURE/Forms/Main/dashboard.ui
       <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 184, 221, 255), stop:0.971591 rgba(0, 205, 137, 255));</string>
-=======
-      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(31, 174, 126, 255), stop:1 rgba(97, 167, 209, 255));
-image: url(:/resources/img/CoviCURE.png);</string>
->>>>>>> 1b5ed295152bde7299fb27c2d7dbf5b4fbc844e1:CoviCURE/Forms/Main/home.ui
      </property>
      <property name="text">
       <string/>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_Out">
-     <property name="geometry">
-      <rect>
-       <x>570</x>
-       <y>400</y>
-       <width>101</width>
-       <height>101</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>:/resources/img/power-button.png</normaloff>:/resources/img/power-button.png</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>85</width>
-       <height>85</height>
-      </size>
      </property>
     </widget>
    </widget>
@@ -231,13 +219,33 @@ image: url(:/resources/img/CoviCURE.png);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1300</width>
+     <width>1260</width>
      <height>17</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="separator"/>
+    <addaction name="actionClose_2"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionClose">
+   <property name="text">
+    <string>Close</string>
+   </property>
+  </action>
+  <action name="actionClose_2">
+   <property name="text">
+    <string>Close</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
