--- a/CoviCURE/Forms/Main/login.ui
+++ b/CoviCURE/Forms/Main/login.ui
@@ -22,11 +22,8 @@
      <x>300</x>
      <y>60</y>
      <width>691</width>
-     <height>571</height>
+     <height>561</height>
     </rect>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 145, 174, 255), stop:1 rgba(184, 50, 50, 255));
@@ -46,6 +43,7 @@ border-radius: 20px;</string>
     </property>
     <property name="font">
      <font>
+      <family>Segoe UI</family>
       <pointsize>36</pointsize>
       <italic>false</italic>
       <bold>true</bold>
@@ -91,6 +89,7 @@ color: rgb(255, 255, 255);
     </property>
     <property name="font">
      <font>
+      <family>Segoe UI</family>
       <pointsize>16</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -123,6 +122,7 @@ border-radius: 10px;</string>
     </property>
     <property name="font">
      <font>
+      <family>Segoe UI</family>
       <pointsize>26</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -156,6 +156,7 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="font">
      <font>
+      <family>Segoe UI</family>
       <pointsize>16</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -191,6 +192,7 @@ border-radius: 10px;</string>
     </property>
     <property name="font">
      <font>
+      <family>Segoe UI</family>
       <pointsize>26</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -210,17 +212,10 @@ color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="pushButton_login">
     <property name="geometry">
      <rect>
-<<<<<<< HEAD
       <x>470</x>
       <y>460</y>
       <width>181</width>
       <height>61</height>
-=======
-      <x>540</x>
-      <y>430</y>
-      <width>101</width>
-      <height>101</height>
->>>>>>> 1b5ed295152bde7299fb27c2d7dbf5b4fbc844e1
      </rect>
     </property>
     <property name="sizePolicy">
@@ -231,6 +226,7 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="font">
      <font>
+      <family>Arial Rounded MT Bold</family>
       <pointsize>14</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -239,20 +235,10 @@ color: rgb(255, 255, 255);</string>
     <property name="styleSheet">
      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
 font: 14pt &quot;Arial Rounded MT Bold&quot;;
-border-radius: 50px;</string>
+border-radius: 6px;</string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset resource="../../resource.qrc">
-      <normaloff>:/resources/img/user.png</normaloff>:/resources/img/user.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>80</width>
-      <height>80</height>
-     </size>
+     <string>Login</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_back">
@@ -289,8 +275,6 @@ border-radius: 6px;</string>
    </widget>
   </widget>
  </widget>
- <resources>
-  <include location="../../resource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
