--- a/CoviCURE/Forms/Rapidcovid/quepage1.ui
+++ b/CoviCURE/Forms/Rapidcovid/quepage1.ui
@@ -90,7 +90,7 @@ color: rgb(255, 255, 255);
     <property name="styleSheet">
      <string notr="true">font: 600  20pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.130682 rgba(0, 255, 96, 255), stop:0.909091 rgba(0, 225, 169, 255));
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.0909091 rgba(143, 0, 228, 255), stop:1 rgba(127, 0, 255, 255));
 border-radius: 10px;</string>
     </property>
     <property name="text">
@@ -115,8 +115,8 @@ border-radius: 10px;</string>
     <property name="styleSheet">
      <string notr="true">font: 600  20pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 10px;</string>
+border-radius: 10px;
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 181, 255, 255), stop:1 rgba(0, 117, 255, 255));</string>
     </property>
     <property name="text">
      <string>18-44</string>
